<resources>
    <string name="app_name">Nostra</string>
    <string name="title_activity_maps">Map</string>

    <!-- Splash Screen Activity -->
    <string name="loading_data">ładujemy dane. proszę czekać.</string>

    <!-- NAGIVATION MENU OPTIONS -->
    <string name="PEKA">Monitor PEKA</string>
    <string name="city_bikes">Rowery miejskie</string>
    <string name="ticket_machines">Biletomaty</string>
    <string name="parking_machines">Parkomaty</string>
    <string name="ticket_points">Punkty sprzedaży biletów</string>
    <string name="other">Inne</string>
    <string name="settings">Ustawienia</string>
    <string name="informations">Informacje</string>
    <string name="help">Pomoc</string>

    <!-- Parking Machines Fragment -->
    <string name="zone">Strefa: </string>


    <!-- Floating Action Button -->
    <string name="your_position">Twoja pozycja</string>

    <!-- GPS not available dialog window -->
    <string name="error">Błąd</string>
    <string name="cannot_get_gps">Nie udało się uzyskać połączenia z GPS.</string>
    <string name="gps_not_enabled">Usługi lokalizacyjne są wyłączone.
    Czy chcesz iść do ustawień aby je włączyć?</string>
    <string name="cancel">Anuluj</string>


    <!-- Parking Machines list item -->


    <string-array name="navigation_drawer_options">
        <item>Biletomaty</item>
        <item>Punkty sprzedaży biletów</item>
        <item>Stacje rowerowe</item>
    </string-array>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="credit_cards">Możliwa płatności kartą.</string>

    <string name="access_to_the_internet">Dostęp do internetu podczas pierwszego uruchomienia
    jest obowiązkowy.</string>
    <string name="no_access_last_udpate">Brak dostępu do internetu. Wyświetlone dane pochodzą z: </string>
    <string name="official_site">Oficjalna strona:</string>
    <string name="terms">Regulamin</string>
    <string name="hotline">Telefon kontaktowy</string>
    <string name="free_bikes">Wolne rowery:</string>
    <string name="bikes_number">Numery rowerów:</string>
    <string name="meter_unit">m</string>

</resources>
